# PortabilityCode

./: .gitignore  CMakeLists.txt  README.md  authors.html  base_8c-example.html  codeblocks.html  dir_e68e8157741866f444e17edd764ebbae.html  doxygen_crawl.html  examples.html  files.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  group__portability.html  index.html  menudata.js  modules.html  pages.html  portability_8h.html  portability_8h_source.html  test_8c-example.html  topics.html  xcode.html
.github/workflows/: main.yml
doc/: Doxyfile
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  enums_0.js  enumvalues_0.js  files_0.js  functions_0.js  groups_0.js  pages_1.js  pages_2.js  pages_3.js  searchdata.js
